Начальная разметка страницы

--- a/index.html
+++ b/index.html
@@ -9,8 +9,154 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-
-
+<header class="header">
+    <div class="container">
+        <div class="header__inner">
+        <menu class="menu">
+            <li class="menu__list-item"><a class="menu__list-link" href="#"></a></li>
+            <li class="menu__list-item"><a class="menu__list-link" href="#"></a></li>
+            <li class="menu__list-item"><a class="menu__list-link" href="#"></a></li>
+            <li class="menu__list-item"><a class="menu__list-link" href="#"></a></li>
+            <li class="menu__list-item"><a class="menu__list-link" href="#"></a></li>
+            <li class="menu__list-item"><a class="menu__list-link" href="#"></a></li>
+        </menu>
+            <div class="header__info">
+                <select class="header__select">
+                    <option class="header__select-option"></option>
+                    <option class="header__select-option"></option>
+                </select>
+                <select class="header__select">
+                    <option class="header__select-option"></option>
+                    <option class="header__select-option"></option>
+                </select>
+                <select class="header__select">
+                    <option class="header__select-option"></option>
+                    <option class="header__select-option"></option>
+                </select>
+                <div class="header__info-block">
+                    <p class="header__info-block__number"></p>
+                    <p class="header__info-block__description"></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<section class="first-screen" style="">
+    <div class="container">
+        <a class="logo" href="#"><img src="images/" alt=""></a>
+        <h5 class="subtitle section-title"></h5>
+        <h1 class="title"></h1>
+        <a class="first-screen__link btn__link" href="#"></a>
+    </div>
+</section>
+<section class="catalog">
+    <div class="container">
+        <h3 class="section-title"></h3>
+        <div class="catalog-sort sort">
+            <p class="catalog__text"></p>
+            <select class="sort-select">
+                <option class="sort-select__option"></option>
+                <option class="sort-select__option"></option>
+                <option class="sort-select__option"></option>
+            </select>
+        </div>
+    </div>
+    <div class="catalog__items">
+        <div class="catalog__item catalog__item-big hit">
+            <img class="catalog__item-img" src="" alt="">
+            <div class="catalog__item-textarea">
+                <h4 class="catalog__item-textarea__title"></h4>
+                <p class="catalog__item-textarea__field"><span></span></p>
+                <p class="catalog__item-textarea__field"><span></span></p>
+                <div class="catalog__item-textarea__prices">
+                    <p class="catalog__item-textarea__prices-new"></p>
+                </div>
+            </div>
+        </div>
+        <div class="catalog__item catalog__item-small discount">
+            <img class="catalog__item-img" src="" alt="">
+            <div class="catalog__item-textarea">
+                <h4 class="catalog__item-textarea__title"></h4>
+                <p class="catalog__item-textarea__field"><span></span></p>
+                <p class="catalog__item-textarea__field"><span></span></p>
+                <div class="catalog__item-textarea__prices">
+                    <p class="catalog__item-textarea__prices-new"></p>
+                    <p class="catalog__item-textarea__prices-old"></p>
+                </div>
+            </div>
+        </div>
+        <div class="catalog__item catalog__item-small discount-num">
+            <img class="catalog__item-img" src="" alt="">
+            <div class="catalog__item-textarea">
+                <h4 class="catalog__item-textarea__title"></h4>
+                <p class="catalog__item-textarea__field"><span></span></p>
+                <p class="catalog__item-textarea__field"><span></span></p>
+                <div class="catalog__item-textarea__prices">
+                    <p class="catalog__item-textarea__prices-new"></p>
+                    <p class="catalog__item-textarea__prices-old"></p>
+                </div>
+            </div>
+        </div>
+        <div class="catalog__item catalog__item-middle discount-num">
+            <img class="catalog__item-img" src="" alt="">
+            <div class="catalog__item-textarea">
+                <h4 class="catalog__item-textarea__title"></h4>
+                <p class="catalog__item-textarea__field"><span></span></p>
+                <p class="catalog__item-textarea__field"><span></span></p>
+                <div class="catalog__item-textarea__prices">
+                    <p class="catalog__item-textarea__prices-new"></p>
+                    <p class="catalog__item-textarea__prices-old"></p>
+                </div>
+            </div>
+        </div>
+        <div class="catalog__item catalog__item-middle discount-num">
+            <img class="catalog__item-img" src="" alt="">
+            <div class="catalog__item-textarea">
+                <h4 class="catalog__item-textarea__title"></h4>
+                <p class="catalog__item-textarea__field"><span></span></p>
+                <p class="catalog__item-textarea__field"><span></span></p>
+                <div class="catalog__item-textarea__prices">
+                    <p class="catalog__item-textarea__prices-new"></p>
+                    <p class="catalog__item-textarea__prices-old"></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <a class="catalog__link btn__link" href="#"></a>
+</section>
+<footer class="footer">
+    <div class="container">
+        <div class="footer__inner">
+            <div class="footer__item">
+                <div class="footer__item-sub">
+                    <ul class="footer__item-sub__list">
+                        <li class="footer__item-sub__list-item"><a class="footer__item-sub__list-link" href="#"></a>
+                        </li>
+                        <li class="footer__item-sub__list-item"><a class="footer__item-sub__list-link" href="#"></a>
+                        </li>
+                        <li class="footer__item-sub__list-item"><a class="footer__item-sub__list-link" href="#"></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__item-sub">
+                    <ul class="footer__item-sub__list social-list">
+                        <li class="footer__item-sub__list-item"><a class="footer__item-sub__list-link" href="#"></a>
+                        </li>
+                        <li class="footer__item-sub__list-item"><a class="footer__item-sub__list-link" href="#"></a>
+                        </li>
+                        <li class="footer__item-sub__list-item"><a class="footer__item-sub__list-link" href="#"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__item">
+                <p class="header__info-block__number"></p>
+                <p class="header__info-block__description"></p>
+                <p class="footer__copy"></p>
+            </div>
+        </div>
+    </div>
+</footer>
 <script src="js/main.min.js"></script>
 </body>
 </html>
