Застилизовал сэкшен footer

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="footer__inner">
             <div class="footer__item">
                 <div class="footer__item-sub">
-                    <ul class="footer__item-sub__list">
+                    <ul class="footer__item-sub__list footer__menu">
                         <li class="footer__item-sub__list-item"><a class="footer__item-sub__list-link" href="#">Вход для
                             партнеров</a>
                         </li>
