Адаптив сэкшенов header и first-screen(1300px)

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         </div>
     </div>
 </section>
+<!--
 <section class="catalog">
     <div class="container">
         <h3 class="catalog__title section-title">Каталог круизов</h3>
@@ -147,7 +148,7 @@
         </div>
     </div>
 </section>
-<form id="card-form" class="card-form mfp-hide white-popup-block"><!--mfp-hide white-popup-block-->
+<form id="card-form" class="card-form mfp-hide white-popup-block">
     <div class="card-form__inner">
         <div class="card-form__photos">
             <img class="card-form__photos-big" src="images/popup-img__1.jpg" alt="">
@@ -227,7 +228,7 @@
             </div>
         </div>
     </div>
-</footer>
+</footer>-->
 <script src="js/main.min.js"></script>
 </body>
 </html>
